--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="palavras,separadas,por,virgula">
   <meta name="author" content="Fabio Soutto Desenvolvedor Web" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Projeto 07 - Materialize</title>
+  <title>Site Modelo 4 - Materialize</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
